Fixed sidebar color

--- a/src/containers/calendar.css
+++ b/src/containers/calendar.css
@@ -6,7 +6,7 @@
 
     h1 {
       font-family: 'Just Another Hand', cursive;
-      font-size: 80px;
+      font-size: px;
     }
     
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
