--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ body {
 }
 .sidenav {
     padding-top: 20px;
-    background-color: #fea680 !important;
+    background-color: white !important;
     height: 100%;
     border: .5px solid #292F36;
     border-radius: 15px;
