--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-color: #01abaa;
+    background-image: url("images/blurry-691240.jpg");
+    background-size: 100% auto; 
 }
 
 .navbar {
@@ -54,30 +55,10 @@ body {
     border-color: #fedc3d;
 }
 
-/*#footer{
-
-    background-color: #292F36;
-    color: #F7FFF7;
-    padding: 15px;
-}*/
-
-#footer {
-  color: white;
-
-  padding: 15px;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px; 
-  
-}
-
 #main{
     min-height: 100%;
     margin-bottom: 90px;
-    background-color: #01abaa;
-}
+}    
 
 #root{
     margin-bottom: 60px;
@@ -88,12 +69,22 @@ body {
     margin-left: 0px;
     padding: 10px;
     background-color: #fedc3d;
+}
 
+#footer {
+  color: #FEDC3D;
+  padding: 15px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;  
 }
 
 #footerP{
-    margin: -15px;
-    background-color: black;
+  font-family: 'Roboto', sans-serif;
+  margin: -15px;
+  background-color: black;
 }
 
 .thumbnail{
@@ -113,6 +104,10 @@ i{
 #calendars{
   display: inline;
   font-family: 'Just Another Hand', cursive;
+}
+
+#calendarRow{
+  color: white;
 }
 
 .panel{
