shows group names on dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-image: url("images/blurry-691240.jpg");
+    /*background-image: url("./img/blurryCity.jpg");*/
     background-size: 100% auto; 
 }
 
