--- a/src/components/group.css
+++ b/src/components/group.css
@@ -6,15 +6,88 @@
 .sidenav {
   padding-top: 20px;
   background-color: white !important;
-  height: 100%;
+  height: 450px;
 
   border: .2px solid #292F36;
   border-radius: 15px;
   font-family: 'Roboto', sans-serif;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: url("img/blurryCity.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center;
+  margin-left: auto;
+  margin-right: auto;; 
+}
+
+.navbar {
+  margin-bottom: 0;
+  border-radius: 0;
+}
+
+.navbar-brand {
+
+    float: left;
+    height: 50px;
+    padding: 15px 15px;
+    font-size: 50px;
+    line-height: 20px;
+    font-family: 'Just Another Hand', cursive;
+}
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+    color: #fff;
+    background-color: #080808;
+    font-family: 'Roboto', sans-serif;
+}
+
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    border-color: #fedc3d;
+    background-color: #fedc3d;
+    font-family: 'Roboto', sans-serif;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #292F36;
+}
+
+.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+    margin-left: 10px;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #292F36;
+}
+
+.navbar-inverse {
+    background-color: #fedc3d;
+    border-color: #fedc3d;
+}
+
+#navBarRow {
+    max-width: 100%;
+    margin-left: 0px;
+    padding: 10px;
+    background-color: #fedc3d;
+}
 
 
+#calBackground{
+  background-color: rgba(255, 255, 255, .8);
+  border-radius: 15px;
+  margin-right: 20px;
+}
+
+/*#footer{
+  
+}*/
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
@@ -24,3 +97,4 @@
   }
   .row.content {height:auto;} 
 }
+
