I hate media queries

--- a/src/components/login_signup.css
+++ b/src/components/login_signup.css
@@ -40,6 +40,15 @@ body{
   background-color: #01abaa;
 }
 
+@media screen and (min-width: 1199) {
+  .panel{
+    vertical-align: middle;
+    position: fixed;
+    top: 25%;
+  }
+  
+}
+
 
 
 
