--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -106,10 +106,10 @@ i{
 }
 
 #groupNameBox{
-  margin-left: 20%;
+  margin-left: 10%;
   background-color: rgba(254,166,128,.8);
-  height: 150px;
   border-radius: 15px;
+  margin-right: 5%;
 }
 
 #groupButton, #logOutButton{
@@ -134,6 +134,7 @@ i{
   margin-right: 60px;
 }
 
+
 #footerDashboard{
   padding-top: 25px !important;
   max-width: 100% !important;
@@ -147,6 +148,75 @@ i{
   margin: -15px !important;
   background-color: black !important;
 }
+
+/*MEDIA QUERIES:*/
+
+@media screen and (max-width: 1230px){
+    p {
+      word-wrap: break-word;
+    }
+}
+
+@media screen and (max-width: 1052px){
+    body {
+      background: transparent url("img/blurryCity.jpg") no-repeat top center fixed;
+    }
+}
+
+@@media (max-width: 769px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+        margin-top: 0px;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+  }
+
+
+/*@media (min-width: 768px) and (max-width: 1000px) {
+   .collapse {
+       display: none !important;
+   }
+}
+
+@media (min-width: 768px) and (max-width: 1000px) {
+   .navbar-collapse.collapse {
+       display: block !important;
+   }
+}*/
+
+
+
 
 
 
