--- a/src/components/createEvent_addUser.css
+++ b/src/components/createEvent_addUser.css
@@ -11,7 +11,7 @@
 	font-size: 34px;
 }
 
-#createEventButton, #addUserButton{
+#createEventButton, #addUserButton, #updateEventButton{
   color: #f5f5f5;
   background-color: #01ABAA;
   border-color: #1abc9c;
@@ -29,5 +29,13 @@
 
 #createEventHeading, #addUserHeading{
   background-color: #01abaa;
+}
+
+textarea {
+	line-height: 10px;
+}
+
+#updateEventButton, #createEventButton{
+	margin-top: 10px;
 }
 
